--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "\"Personal Project\"",
   "main": "script.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -17,9 +16,9 @@
   },
   "homepage": "https://github.com/THG20203/Personal-Project#readme",
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "node-sass": "^8.0.0",
   },
   "dependencies": {
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
   }
 }
