--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css -w",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -22,6 +28,7 @@
   },
   "homepage": "https://github.com/THG20203/Personal-Project#readme",
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0"
