--- a/package.json
+++ b/package.json
@@ -3,18 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "concat": "^1.0.3",
-    "express": "^4.17.1"
-  },
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css -w",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "compress:css": "node-sass css/style.comp.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "repository": {
@@ -29,6 +23,7 @@
   "homepage": "https://github.com/THG20203/Football-Project#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.4",
+    "concat": "^1.0.3",
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0"
